attributed to xkcd.com

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
 
     <div class="text-display">
+      <a href="https://xkcd.com">all comics from xkcd.com</a>
       <ul id="metadata">
         <li>list of metadata items!</li>
       </ul>
