--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <title>Document</title>
 </head>
 
-<body>
+<body class="dark">
+  
   <!-- middle column of display, title, above comic, comic, below comic -->
-
   <div class="middle-top">
     <h1 id="title">The not XKCD XKCD website</h1>
   </div>
@@ -26,18 +26,18 @@
 
   <div class="middle-bottom">
 
-    <div class="button">
+    <div class="button floats">
       <button id="likeButton">Like &#x2661</button>
     </div>
 
-    <div class="text-display">
+    <div class="text-display floats">
       <a href="https://xkcd.com">all comics from xkcd.com</a>
       <ul id="metadata">
         <li>list of metadata items!</li>
       </ul>
     </div>
 
-    <div class="button">
+    <div class="button floats">
       <button id="modeToggle">Light/Dark Mode</button>
     </div>
   </div>
