clean up styling for image/title, spoof one comic into db, set up connections to html to load data onto page

--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
 
   <div class="middle-middle">
     <h2 id="name">Comic Name goes here!</h2>
-  </div>
-
-  <div class="middle-middle">
     <img id="imageDisplay" src="" alt="">
   </div>
 
@@ -49,7 +46,7 @@
       <span>Likes:
         <h3 id="comicLikes">at least 3 (TM)</h3>
       </span>
-      <h3 id="comicAlt">alt or transcript, you decide Anthony</h3>
+      <h3 id="comicTranscript">transcript</h3>
     </div>
   </div>
   
