like button, screen formatting

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- middle column of display, title, above comic, comic, below comic -->
   <div class="middle-top">
     <h1 id="title">The not XKCD XKCD website</h1>
+    <button id="random">Get a random comic(from our subset)</button>
   </div>
 
   <div class="middle-middle">
@@ -50,7 +51,7 @@
     </div>
   </div>
   
-  <div class="left-bottom">
+  <div class="left-middle">
     <div class="user-profile">
       <img id="profilePic" width="80" height="80">
       <h4 id="usernameDisplay">Definitely Not Quentin</h4>
